# DISCO2-module-template

./: .gitignore  .gitmodules  Makefile  README.md  config.yaml  configure  decoder.c  linux-aarch64.txt  meson.build  meson_options.txt  output.jxl  test.yaml
src/: classify.cpp  classify_cpu.cpp  crash_and_burn.c  demosaic.cpp  detect.cpp  encoder.c  jpegxl.c  module.c  module.cpp  module_config.pb-c.c  module_template.c  module_template.cpp  test.c
src/include/: config_util.h  globals.h  memory_util.h  module.h  types.h
src/include/utils/: metadata.pb-c.h  util.h  yaml_parser.h
src/module_examples/: dublicate_images.c  id.c  mirror_vertical.c  module_comp.c  module_dub.c  module_flip.c  module_gray.c  module_resize.c  to_grayscale.c  webp_compression.c
src/utils/: batch_util.c  config_util.c  error_util.c  memory_util.c  metadata_util.c  yaml.c  yaml_parser.c
usr/include/opencv4/opencv2/: cvconfig.h
usr/lib/: libedgetpu.so.1.0  libjxl.so.0.10  libjxl.so.0.10.2  libjxl_cms.so.0.10  libjxl_cms.so.0.10.2  libjxl_extras_codec.so.0.10  libjxl_extras_codec.so.0.10.2  libjxl_threads.so.0.10  libjxl_threads.so.0.10.2  libopencv_alphamat.so.405  libopencv_aruco.so.4.5.5  libopencv_bgsegm.so.4.5.5  libopencv_bioinspired.so.4.5.5  libopencv_calib3d.so.4.6.0  libopencv_calib3d.so.406  libopencv_ccalib.so.4.5.5  libopencv_core.so.406  libopencv_dnn.so.406  libopencv_features2d.so.4.6.0  libopencv_features2d.so.406  libopencv_flann.so.4.6.0  libopencv_flann.so.406  libopencv_fuzzy.so.4.5.5  libopencv_gapi.so.406  libopencv_hfs.so.4.5.5  libopencv_highgui.so.4.5.5  libopencv_highgui.so.4.6.0  libopencv_highgui.so.406  libopencv_img_hash.so.4.5.5  libopencv_imgcodecs.so.4.6.0  libopencv_imgcodecs.so.406  libopencv_imgproc.so.406  libopencv_line_descriptor.so.4.5.5  libopencv_ml.so.4.6.0  libopencv_ml.so.406  libopencv_objdetect.so.4.6.0  libopencv_objdetect.so.406  libopencv_phase_unwrapping.so.4.5.5  libopencv_photo.so.4.6.0  libopencv_photo.so.406  (+20 more)
usr/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
usr/lib/gimp/2.0/plug-ins/file-jxl/: file-jxl
usr/lib/pkgconfig/: libjxl.pc  libjxl_cms.pc  libjxl_threads.pc  libprotobuf-c.pc  opencv4.pc
usr/share/licenses/opencv4/: ippiw-support.txt
